--- a/EmployeeRegistrationpageUsingMVC/Views/Home/Index.cshtml
+++ b/EmployeeRegistrationpageUsingMVC/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<EmployeeRegistrationpageUsingMVC.ViewModel.EmployeeViewModel>
+@{
     ViewBag.Title = "Home Page";
 }
 <div class="container-fluid">
@@ -7,72 +8,74 @@
 
         <div class="row">
             <div class="col-md-4">
-               
-                    <div class="form-group">
-                        <label for="txtemployee">Employeem Name</label>
-                        <input type="text" class="form-control" id="txtemployee" name="txtemployee" placeholder="Employee Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="txtdob">Date of birth</label>
-                        <input type="date" class="form-control" id="txtdob" name="txtdob" placeholder="enter date of birth">
-                    </div>
-                    <div class="form-group">
-                        <div class="form-check">
-                            <label for="rdogender">Gender</label>&nbsp;&nbsp;
 
-                            <input class="form-check-input" type="radio" name="rdogender" id="mrdo" value="M">
-                            <label class="form-check-label" for="mrdo">
-                                Male
-                            </label>
-                            <input class="form-check-input" type="radio" name="rdogender" id="frdo" value="F">
-                            <label class="form-check-label" for="frdo">
-                                Female
-                            </label>
-                        </div>
-                        </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Address</label>
-                        <input type="text" class="form-control" id="txtaddress" name="txtaddress" placeholder="Address">
+                <div class="form-group">
+                    <label for="txtemployee">Employeem Name</label>
+                    <input type="text" class="form-control" id="txtemployee" name="txtemployee" placeholder="Employee Name">
+                </div>
+                <div class="form-group">
+                    <label for="txtdob">Date of birth</label>
+                    <input type="date" class="form-control" id="txtdob" name="txtdob" placeholder="enter date of birth">
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <label for="rdogender">Gender</label>&nbsp;&nbsp;
+
+                        <input class="form-check-input RDOCHECKED" type="radio" name="rdogender" id="mrdo" value="M">
+                        <label class="form-check-label" for="mrdo">
+                            Male
+                        </label>
+                        <input class="form-check-input RDOCHECKED" type="radio" name="rdogender" id="frdo" value="F">
+                        <label class="form-check-label" for="frdo">
+                            Female
+                        </label>
                     </div>
-                    <div class="form-group">
-                        <label for="ddlstate">select state</label>
-                        <select class="form-control" id="ddlstate">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Address</label>
+                    <input type="text" class="form-control" id="txtaddress" name="txtaddress" placeholder="Address">
+                </div>
+                <div class="form-group">
+                    <label for="ddlstate">select state</label>
+                    @Html.DropDownList("ddlstate", (IEnumerable<SelectListItem>)ViewBag.ddlstate, "select", new { @class = "form-control" })
+                    @*<select class="form-control" id="ddlstate">
                             <option value="">Select</option>
                             <option value="jp">jaipur</option>
-                        </select>
+                        </select>*@
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input checkedevent" type="checkbox" id="chkcook" value="Cooking" name="chkhobbye">
+                        <label class="form-check-label" for="chkcook">
+                            Cooking
+                        </label>
+
+                        <input class="form-check-input checkedevent" type="checkbox" id="chkread" value="Reading" name="chkhobbye">
+                        <label class="form-check-label" for="chkread">
+                            Reading
+                        </label>
+
+                        <input class="form-check-input checkedevent" type="checkbox" id="chkwr" value="Writing" name="chkhobbye">
+                        <label class="form-check-label" for="chkwr">
+                            Writing
+                        </label>
+                        <input class="form-check-input checkedevent" type="checkbox" id="chkphto" value="PhotoGraph" name="chkhobbye">
+                        <label class="form-check-label" for="chkphto">
+                            PhotoGraph
+                        </label>
+
                     </div>
-                    <div class="form-group">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="chkcook" value="Cooking" name="chkhobbye">
-                            <label class="form-check-label" for="chkcook">
-                                Cooking
-                            </label>
+                    <input type="hidden" id="hdchkval" name="hdchkval" value="" />
 
-                            <input class="form-check-input" type="checkbox" id="chkread" value="Reading" name="chkhobbye">
-                            <label class="form-check-label" for="chkread">
-                                Reading
-                            </label>
+                </div>
+                <div><button type="button" id="btnsubmits" class="btn btn-success">Success</button></div>
 
-                            <input class="form-check-input" type="checkbox" id="chkwr" value="Writing" name="chkhobbye">
-                            <label class="form-check-label" for="chkwr">
-                                Writing
-                            </label>
-                            <input class="form-check-input" type="checkbox" id="chkphto" value="PhotoGraph" name="rdohobbye">
-                            <label class="form-check-label" for="chkphto">
-                                PhotoGraph
-                            </label>
-
-                        </div>
-                        <input type="hidden" id="hdchkval" name="hdchkval" value=""/>
-                    </div>
-                  <div><button type="button" id="btnsubmits" class="btn btn-success">Success</button></div>
-             
             </div>
             <div class="col-md-8">
                 <div id="tblempdata">
                     @Html.Partial("_Employeepart")
                 </div>
-                
+
             </div>
 
         </div>
@@ -82,33 +85,42 @@
 
 </div>
 
-
-
 <script>
 
 
-    $('#chkhobbye:checked').each(function () {
-       var $('#hdchkval').val()
-        hdchkval.push($(this).val());
+</script>
+
+<script>
+
+    $('.checkedevent').on('click', function () {
+        var array = [];
+        $("input:checkbox[name=chkhobbye]:checked").each(function () {
+            array.push($(this).val());
+        });
+       // alert(array);
+        $('#hdchkval').val(array)
     });
 
 
     $('#btnsubmits').click(function () {
-         $.ajax({
-                type: 'POST',
-             url: '@Url.Action("Add_Employee_data","Home")',
-             data: { txtemployee: $("#txtemployee").val(), txtdob: $("#txtdob").val(), rdogender: $("#rdogender").val(), rdogender: $('input[name="rdogender"]:checked').val(), txtaddress: $("#txtaddress").val(), ddlstate: $("#ddlstate").val(), chkhobbye: $('input[name="chkhobbye"]:checked').val() },
-                success: function (response) {
+        alert($('input[name="rdogender"]:checked').val());
+      var rdoval=  $('input[name="rdogender"]:checked').val();
+
+             $.ajax({
+                    type: 'POST',
+                 url: '@Url.Action("Add_Employee_data","Home")',
+                 data: { txtemployee: $("#txtemployee").val(), txtdob: $("#txtdob").val(), rdogender: rdoval, txtaddress: $("#txtaddress").val(), ddlstate: $("#ddlstate").val(), chkhobbye: $('#hdchkval').val() },
+                    success: function (response) {
 
 
 
-                  
-
-                }
-
-            });
 
 
-    })
+                    }
+
+                });
+
+
+        })
 
 </script>
