--- a/EmployeeRegistrationpageUsingMVC/Views/Home/_Employeepart.cshtml
+++ b/EmployeeRegistrationpageUsingMVC/Views/Home/_Employeepart.cshtml
@@ -28,9 +28,25 @@
 
             foreach(var hoby in item.hobieslist)
             {
+                if (hoby.hobyname == "Cooking")
+                {
+                    chkcook = hoby.hobyname == "Cooking" ? "checked" : "";
+                }
+                if (hoby.hobyname == "Reading")
+                {
+                    chkread = hoby.hobyname == "Reading" ? "checked" : "";
+                }
+                if (hoby.hobyname == "Writing")
+                {
+                    chkwrite = hoby.hobyname == "Writing" ? "checked" : "";
+                }
+                if (hoby.hobyname == "PhotoGraph")
+                {
+                    chkphoto = hoby.hobyname == "PhotoGraph" ? "checked" : "";
+                }
 
-              
-                hobyss = hobyss +","+ hoby.hobyname;
+                hobyss = hobyss + "," + hoby.hobyname;
+
             }
 
         <tr>
@@ -48,13 +64,16 @@
                     @item.dob
                     </div>
                     <div style="display:none" class="form-group tblnotshowsave" id="txtbith_@item.Employee_ID">
-                        <input type="date" class="form-control" id="txtdob_@item.Employee_ID" name="txtdob_@item.Employee_ID" placeholder="enter date of birth">
+                        <input type="datetime" class="form-control" id="txtdob_@item.Employee_ID" name="txtdob_@item.Employee_ID" placeholder="enter date of birth">
                     </div>
             </td>
             <td>
                 <div class="tblshowsave  tblshowsave_@item.Employee_ID">
                     @item.address
-                    </div>
+                </div>
+                <div style="display:none" class="form-group tblnotshowsave" id="tbladdress_@item.Employee_ID">
+                    <input type="text" class="form-control" id="txtaddress_@item.Employee_ID" name="txtaddress_@item.Employee_ID" placeholder="Enter state">
+                </div>
             </td>
             <td>
                 <div class="tblshowsave  tblshowsave_@item.Employee_ID">
@@ -63,24 +82,25 @@
                 <div style="display:none" class="form-group tblnotshowsave" id="tbledtrdo_@item.Employee_ID">
 
 
-                    Male <input class="form-check-input RDOCHECKED_@item.Employee_ID" @chMkval type="radio" name="editrdogender_@item.Employee_ID" value="M">
+                    Male <input class="form-check-input RDOCHECKED_@item.Employee_ID" @chMkval type="radio" name="editrdogender_@item.Employee_ID"    value="M">
                     Female
-                    <input class="form-check-input RDOCHECKED_@item.Employee_ID" type="radio" @chFkval name="editrdogender_@item.Employee_ID" value="F">
+                    <input class="form-check-input RDOCHECKED_@item.Employee_ID" type="radio" @chFkval name="editrdogender_@item.Employee_ID"    value="F">
                 </div>
 
             </td>
             <td>
                 <div class="tblshowsave  tblshowsave_@item.Employee_ID">
 
-
-
                     @item.statename
-                    </div>
+
+                   
+
+                </div>
                 <div style="display:none" class="form-group tblnotshowsave" id="tblddltrdo_@item.Employee_ID">
 
                    
 
-                    <select id="ddldrop_@item.Employee_ID">
+                    <select id="ddldrop_@item.Employee_ID" name="ddldrop_@item.Employee_ID">
                         <option>select</option>
 
                     </select>
@@ -93,32 +113,21 @@
                 </div>
                 <div style="display:none" class="form-group tblnotshowsave" id="tbledtbutton_@item.Employee_ID" >
                     <div class="form-check">
-                        @foreach(var hoby in item.hobieslist)
-                        {
-                            if(hoby.hobyname == "Cooking")
-                    {
+                       
 
-                    }
-                        chkcook = hoby.hobyname == "Cooking" ? "checked" : "";
-                        chkread =  hoby.hobyname== "Reading" ? "checked" : "";
-                        chkwrite = hoby.hobyname == "Writing" ? "checked" : "";
-                        chkphoto = hoby.hobyname == "PhotoGraph" ? "checked" : "";
-                      
-                        }
-
-                        <input class="form-check-input checkedevent__@item.Employee_ID" type="checkbox" @chkcook value="Cooking" name="editchkhobbye_@item.Employee_ID">
+                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkcook value="Cooking" name="editchkhobbye">
                         <label class="form-check-label" for="chkcook">
                             Cooking
                         </label>
 
-                        <input class="form-check-input checkedevent__@item.Employee_ID" type="checkbox" @chkread value="Reading" name="editchkhobbye_@item.Employee_ID">
+                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkread value="Reading" name="editchkhobbye">
                         <label class="form-check-label" for="chkread">
                             Reading
                         </label>
 
-                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkwrite value="Writing" name="editchkhobbye_@item.Employee_ID"> Writing
+                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkwrite value="Writing" name="editchkhobbye"> Writing
 
-                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkphoto value="PhotoGraph" name="editchkhobbye_@item.Employee_ID"> PhotoGraph
+                        <input class="form-check-input checkedevent_@item.Employee_ID" type="checkbox" @chkphoto value="PhotoGraph" name="editchkhobbye"> PhotoGraph
 
 
                     </div>
@@ -131,7 +140,7 @@
                 <button type="button" class="btnedit" onclick="Editdata('@item.Employee_ID')">Edit</button>
 
             </td>
-            <td style="display:none" id="tblsave_@item.Employee_ID" class="tblnotshowsave">
+            <td style="display:none" id="tblsave_@item.Employee_ID"  class="tblnotshowsave">
                 <button type="button" class="btnedit" onclick="Savedata('@item.Employee_ID')">Save</button>
 
             </td>
